[package]
name = "near_wordchaser"
version = "0.1.0"
edition = "2021"
authors = ["onchez brian <brianonchez@gmail.com>"]

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"


[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
